// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package ai.floedb.floecat.query;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.query.rpc";

/**
 * Engine-specific rule metadata.
 *
 * For all engines (Floe, Postgres, Trino, Spark, â€¦), the payload is opaque:
 * Floecat never interprets it.
 */
message EngineSpecific {
  // Allow PBtxt readable extension blocks 
  extensions 1 to 99;

  // --- Applicability rules (PBtxt only) ---
  optional string engine_kind = 100;
  optional string min_version = 101;
  optional string max_version = 102;

  // --- Payload for engine-specific data ---
  optional string payload_type = 200;
  optional bytes  payload      = 201;

  // --- Generic metadata ---
  map<string,string> properties = 300;
}